--- a/src/react-pure-modal.css
+++ b/src/react-pure-modal.css
@@ -50,7 +50,7 @@
           flex: 0 0 auto;
 }
 
-.smart-modal > * > [scrollable] {
+.smart-modal > * > .scrollable {
   height: 100%;
   overflow-x: hidden;
   overflow-scrolling: touch;
