--- a/src/react-pure-modal.css
+++ b/src/react-pure-modal.css
@@ -10,42 +10,35 @@
   left: 0;
   z-index: 1040;
   background-color: rgba(0, 0, 0, .4);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
+
 .pure-modal-backdrop .pure-modal {
-  top: 10vh;
-  bottom: 10vh;
   width: 300px;
   max-width: 100%;
-  margin: 0 auto;
-  right: 0;
   position: fixed;
-  left: 0;
   z-index: 1041;
   box-sizing: border-box;
   transition: all .2s ease-in-out;
+  max-height: 100%;
+}
+
+.pure-modal.auto-height {
+  position: static;
 }
 
 .pure-modal-backdrop.scrollable {
   overflow-y: auto;
 }
 
-.pure-modal.auto-height {
-  position: static;
-  margin-top: 10vh;
-  margin-bottom: 10vh;
-}
-
-.pure-modal.auto-height > * {
-  max-height: none;
-}
-
-.pure-modal-backdrop .pure-modal > * {
+.pure-modal > * {
   display: flex;
-  max-height: 100%;
+  max-height: 100vh;
   flex-direction: column;
-  justify-content: center;
-
 }
 
 .pure-modal > * > * {
@@ -53,48 +46,17 @@
 }
 
 .pure-modal > * > .scrollable {
-  max-height: 80vh;
   overflow-x: hidden;
   overflow-scrolling: touch;
   transform: translate3d(0, 0, 0);
   flex: 0 1 auto;
 }
 
-
-@media (max-width: 768px) {
-  .pure-modal-backdrop .pure-modal {
-    top: 5%;
-    bottom: 5%;
-  }
-
-  .pure-modal-backdrop .pure-modal > * {
-    max-height: 90vh;
-  }
-
-  .pure-modal.auto-height > * {
-    max-height: none;
-  }
-}
-
 @media (max-width: 480px) {
   .pure-modal-backdrop .pure-modal {
-    top: 0;
-    margin-top: 0;
-    margin-bottom: 0;
     width: 100%;
   }
-
-  .pure-modal-backdrop .pure-modal > * {
-    height: 100vh;
-    max-height: 100vh;
-  }
-
-  .pure-modal.auto-height > * {
-    height: auto;
-    max-height: none;
-  }
 }
-
 
 .pure-modal .panel-body {
   background-color: #fff;
