--- a/src/react-pure-modal.css
+++ b/src/react-pure-modal.css
@@ -37,10 +37,16 @@
   overflow-y: auto;
 }
 
-.pure-modal > * {
-  display: flex;
-  max-height: 100vh;
-  flex-direction: column;
+.pure-modal-backdrop .panel {
+  display: grid;
+  grid-template-rows: repeat(3, min-content);
+}
+.pure-modal-backdrop:not(.scrollable) .panel {
+  grid-template-rows: min-content minmax(0, 100%) min-content;
+  max-height: -moz-available;
+  max-height: -webkit-fill-available;
+  max-height: fill-available;
+  height: 100%;
 }
 
 .pure-modal > * > * {
@@ -51,7 +57,7 @@
   overflow-x: hidden;
   overflow-scrolling: touch;
   transform: translate3d(0, 0, 0);
-  flex: 0 1 auto;
+
 }
 
 @media (max-width: 480px) {
@@ -66,9 +72,6 @@
 
 .pure-modal .panel-heading {
   background: rgb(240, 240, 240);
-}
-
-.pure-modal .panel-heading {
   position: relative;
 }
 
@@ -104,4 +107,10 @@
 .pure-modal .panel-footer {
   padding: 12px 45px 12px 15px;
   background: rgb(240, 240, 240);
+}
+
+.pure-modal .panel-body,
+.pure-modal .panel-footer,
+.pure-modal .panel-title {
+  word-break: break-all;
 }
